# kite

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  go.work  go.work.sum  kite-sdk-flow.code-workspace  kite-sdk-js.code-workspace  kite-sdk-rust.code-workspace  kite-services.code-workspace  kite.toml.example  marketplace.go  sqlc.yaml  tygo.yaml
.github/ISSUE_TEMPLATE/: 1_bugreport.yml  2_feature_request.yml  2_suggestion.yml  3_question.yml
.github/workflows/: docker-push.yaml  publish-docs.yaml  publish-web.yaml  release.yaml
examples/automod/: .gitignore  index.js  kite.toml  package-lock.json  package.json  tsconfig.json
examples/backup/: go.mod  kite.toml  plugin.go  plugin.wasm
examples/counter/: go.mod  kite.toml  plugin.go
examples/echo/: .gitignore  go.mod  kite.toml  plugin.go
examples/ping/: go.mod  go.sum  kite.toml  (+1 more)
go-sdk/: go.mod  handle.go  sdk.go
go-types/: go.mod
js-sdk/: README.md  package-lock.json  package.json  tsconfig.json
kite-app/: embed.go  go.mod  next.config.mjs  noembed.go  package.json  tailwind.config.ts
kite-common/: go.mod  go.sum
kite-docs/: README.md  docusaurus.config.ts  package-lock.json  package.json
kite-sdk-flow/crates/kiteflow-compiler/: Cargo.toml  build.rs
kite-sdk-flow/crates/kiteflow-compiler/src/: main.rs
kite-sdk-flow/crates/kiteflow-engine/: Cargo.toml  test.json
kite-sdk-flow/crates/kiteflow-engine/src/: main.rs  sys.rs
kite-sdk-flow/crates/kiteflow-engine/src/data/: mod.rs  node.rs
kite-sdk-flow/crates/kiteflow-engine/src/engine/: edge.rs  mod.rs  node.rs  tree.rs
kite-sdk-flow/crates/kiteflow-engine/src/tree/: event.rs  mod.rs  parse.rs  tree.rs
kite-sdk-go/: go.mod  handle.go  kv.go  sdk.go  tygo.yaml
kite-sdk-js/: api-extractor.json  package.json  tsconfig.json
kite-sdk-js/crates/kitejs-compiler/: Cargo.toml
kite-sdk-rust/: Cargo.toml
kite-sdk-rust/crates/kiters/: Cargo.toml
kite-sdk-rust/crates/kiters-macros/: Cargo.toml
kite-service/: .env.example  .gitignore  .goreleaser.yml  alpaca.toml  docker-compose.yaml  go.mod  go.sum  main.go  sqlc.yaml  tygo.yaml
kite-site/: README.md  docusaurus.config.ts  package.json
kite-types/: go.mod  go.sum  tygo.yaml
kite-web/: README.md  embed.go  go.mod  go.sum  next.config.mjs  noembed.go  package-lock.json  package.go  package.json  tailwind.config.ts  tsconfig.json
(+1264 files in other folders)
