[profile.release]
lto = true
opt-level = 's'

[workspace]
resolver = "2"
members = [
    "kite-sdk-js/crates/kitejs-compiler",
    "kite-sdk-flow/crates/kiteflow-compiler",
    "kite-sdk-flow/crates/kiteflow-engine",
]
exclude = [
    # TODO: resolve depdency conflicts so this can be a workspace memebr
    "kite-sdk-js/crates/kitejs-engine",
]