[package]
name = "kiteflow-engine"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3

[dependencies]
anyhow = "1.0.79"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kiters-sys = { path = "../../../kite-sdk-rust/crates/kiters-sys", version = "0.1.0" }
